--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sitemap-generator",
+  "name": "mapvibe",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
